WebGPUGen/WaveEngine.Bindings.WebGPU/Commands.cs


		[DllImport(dllName)]
		public static extern void wgpuRenderBundleEncoderPushDebugGroup(IntPtr renderBundleEncoder, char* groupLabel);

		[DllImport(dllName)]
		public static extern void wgpuRenderBundleEncoderSetBindGroup(IntPtr renderBundleEncoder, uint groupIndex, IntPtr group, uint dynamicOffsetCount, uint* dynamicOffsets);

		[DllImport(dllName)]
		public static extern void wgpuRenderBundleEncoderSetIndexBuffer(IntPtr renderBundleEncoder, IntPtr buffer, WGPUIndexFormat format, ulong offset, ulong size);

		[DllImport(dllName)]
		public static extern void wgpuRenderBundleEncoderSetLabel(IntPtr renderBundleEncoder, char* label);

		[DllImport(dllName)]
		public static extern void wgpuRenderBundleEncoderSetPipeline(IntPtr renderBundleEncoder, IntPtr pipeline);

		[DllImport(dllName)]
		public static extern void wgpuRenderBundleEncoderSetVertexBuffer(IntPtr renderBundleEncoder, uint slot, IntPtr buffer, ulong offset, ulong size);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderBeginOcclusionQuery(IntPtr renderPassEncoder, uint queryIndex);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderBeginPipelineStatisticsQuery(IntPtr renderPassEncoder, IntPtr querySet, uint queryIndex);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderDraw(IntPtr renderPassEncoder, uint vertexCount, uint instanceCount, uint firstVertex, uint firstInstance);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderDrawIndexed(IntPtr renderPassEncoder, uint indexCount, uint instanceCount, uint firstIndex, int baseVertex, uint firstInstance);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderDrawIndexedIndirect(IntPtr renderPassEncoder, IntPtr indirectBuffer, ulong indirectOffset);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderDrawIndirect(IntPtr renderPassEncoder, IntPtr indirectBuffer, ulong indirectOffset);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderEnd(IntPtr renderPassEncoder);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderEndOcclusionQuery(IntPtr renderPassEncoder);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderEndPipelineStatisticsQuery(IntPtr renderPassEncoder);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderExecuteBundles(IntPtr renderPassEncoder, uint bundleCount, IntPtr* bundles);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderInsertDebugMarker(IntPtr renderPassEncoder, char* markerLabel);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderPopDebugGroup(IntPtr renderPassEncoder);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderPushDebugGroup(IntPtr renderPassEncoder, char* groupLabel);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetBindGroup(IntPtr renderPassEncoder, uint groupIndex, IntPtr group, uint dynamicOffsetCount, uint* dynamicOffsets);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetBlendConstant(IntPtr renderPassEncoder, WGPUColor* color);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetIndexBuffer(IntPtr renderPassEncoder, IntPtr buffer, WGPUIndexFormat format, ulong offset, ulong size);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetLabel(IntPtr renderPassEncoder, char* label);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetPipeline(IntPtr renderPassEncoder, IntPtr pipeline);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetScissorRect(IntPtr renderPassEncoder, uint x, uint y, uint width, uint height);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetStencilReference(IntPtr renderPassEncoder, uint reference);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetVertexBuffer(IntPtr renderPassEncoder, uint slot, IntPtr buffer, ulong offset, ulong size);

		[DllImport(dllName)]
		public static extern void wgpuRenderPassEncoderSetViewport(IntPtr renderPassEncoder, float x, float y, float width, float height, float minDepth, float maxDepth);

		[DllImport(dllName)]
		public static extern IntPtr wgpuRenderPipelineGetBindGroupLayout(IntPtr renderPipeline, uint groupIndex);

		[DllImport(dllName)]
		public static extern void wgpuRenderPipelineSetLabel(IntPtr renderPipeline, char* label);

		[DllImport(dllName)]
		public static extern void wgpuSamplerSetLabel(IntPtr sampler, char* label);

		[DllImport(dllName)]
		public static extern void wgpuShaderModuleGetCompilationInfo(IntPtr shaderModule, WGPUCompilationInfoCallback callback, void* userdata);

		[DllImport(dllName)]
		public static extern void wgpuShaderModuleSetLabel(IntPtr shaderModule, char* label);

		[DllImport(dllName)]
		public static extern WGPUTextureFormat wgpuSurfaceGetPreferredFormat(IntPtr surface, IntPtr adapter);

		[DllImport(dllName)]
		public static extern IntPtr wgpuSwapChainGetCurrentTextureView(IntPtr swapChain);

		[DllImport(dllName)]
		public static extern void wgpuSwapChainPresent(IntPtr swapChain);

		[DllImport(dllName)]
		public static extern IntPtr wgpuTextureCreateView(IntPtr texture, WGPUTextureViewDescriptor* descriptor);

		[DllImport(dllName)]
		public static extern void wgpuTextureDestroy(IntPtr texture);

		[DllImport(dllName)]
		public static extern uint wgpuTextureGetDepthOrArrayLayers(IntPtr texture);

		[DllImport(dllName)]
		public static extern WGPUTextureDimension wgpuTextureGetDimension(IntPtr texture);

		[DllImport(dllName)]
		public static extern WGPUTextureFormat wgpuTextureGetFormat(IntPtr texture);

		[DllImport(dllName)]
		public static extern uint wgpuTextureGetHeight(IntPtr texture);

		[DllImport(dllName)]
		public static extern uint wgpuTextureGetMipLevelCount(IntPtr texture);

		[DllImport(dllName)]
		public static extern uint wgpuTextureGetSampleCount(IntPtr texture);

		[DllImport(dllName)]
		public static extern WGPUTextureUsage wgpuTextureGetUsage(IntPtr texture);

		[DllImport(dllName)]
		public static extern uint wgpuTextureGetWidth(IntPtr texture);

		[DllImport(dllName)]
		public static extern void wgpuTextureSetLabel(IntPtr texture, char* label);

		[DllImport(dllName)]
		public static extern void wgpuTextureViewSetLabel(IntPtr textureView, char* label);
	}
}
